[gd_scene load_steps=34 format=3 uid="uid://da0pnhi6ei4g0"]

[ext_resource type="Texture2D" uid="uid://ciltloduhnytp" path="res://assets/icons/Heart.svg" id="3_51bfy"]
[ext_resource type="Script" path="res://scripts/Image.gd" id="3_cr3j3"]
[ext_resource type="Texture2D" uid="uid://c70tcusnoisng" path="res://assets/icons/LightBulb.svg" id="3_ikp8g"]
[ext_resource type="Script" path="res://scripts/ColorRect.gd" id="4_dgbhr"]
[ext_resource type="Texture2D" uid="uid://do7fk33fm1fvv" path="res://assets/icons/PlayCircle.svg" id="4_mng0e"]
[ext_resource type="Texture2D" uid="uid://dls3o3k73odkq" path="res://assets/icons/icons_hovered/LightBulb_hovered.svg" id="4_wchhm"]
[ext_resource type="Script" path="res://scripts/SupportButton.gd" id="5_60fsh"]
[ext_resource type="Texture2D" uid="uid://odyul8otvpm7" path="res://assets/icons/SpeakerWave.svg" id="5_gdcre"]
[ext_resource type="Texture2D" uid="uid://kgeci10ui75j" path="res://assets/icons/icons_hovered/Heart_hovered.svg" id="5_lyyus"]
[ext_resource type="AudioStream" uid="uid://6n6a55u62dd3" path="res://assets/audio/Brownnoise.ogg" id="7_ei42t"]
[ext_resource type="Script" path="res://scripts/HSlider.gd" id="7_gtag2"]
[ext_resource type="Texture2D" uid="uid://dolk0x4ifefe0" path="res://assets/icons/icons_hovered/PlayCircle_hovered.svg" id="9_cynci"]
[ext_resource type="Texture2D" uid="uid://bcagqi0prc0be" path="res://assets/icons/icons_hovered/PauseCircle_hovered.svg" id="9_qj1g7"]
[ext_resource type="Texture2D" uid="uid://do8bgvu875p7n" path="res://assets/icons/icons_hovered/SpeakerWave_hovered.svg" id="10_w3ax0"]
[ext_resource type="Texture2D" uid="uid://cyncto1bty5d7" path="res://assets/icons/icons_hovered/SpeakerXMark_hovered.svg" id="11_lu1wo"]
[ext_resource type="Script" path="res://scripts/MuteButton.gd" id="14_k2qb6"]
[ext_resource type="Script" path="res://scripts/TopPanel.gd" id="15_hk3kj"]
[ext_resource type="Texture2D" uid="uid://b75ouflx7k6pi" path="res://assets/icons/MinusCircle.svg" id="15_qon0v"]
[ext_resource type="Texture2D" uid="uid://dihsxnhr82j0r" path="res://assets/icons/icons_hovered/MinusCircle_hovered.svg" id="16_6gfof"]
[ext_resource type="Texture2D" uid="uid://blrtlkww3rtd6" path="res://assets/icons/PlusCircle.svg" id="17_pgdxf"]
[ext_resource type="Texture2D" uid="uid://b6sr4xf78dg5d" path="res://assets/icons/icons_hovered/PlusCircle_hovered.svg" id="18_0johc"]
[ext_resource type="Texture2D" uid="uid://by5mqam08u2dg" path="res://assets/icons/XCircle.svg" id="19_r3uom"]
[ext_resource type="Texture2D" uid="uid://biejq6m2u5xq7" path="res://assets/icons/icons_hovered/XCircle_hovered.svg" id="20_l0ccj"]
[ext_resource type="Texture2D" uid="uid://bsojidxpjkgqv" path="res://fuzz_ICON.png" id="23_1o0wv"]
[ext_resource type="Script" path="res://scripts/AudioStreamPlayer.gd" id="25_ggpoa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1o4g"]
bg_color = Color(0.223529, 0.188235, 0.172549, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yrtfr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjstw"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8trbr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b3veu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a864l"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_t6ahn"]
color = Color(0.121569, 0.0980392, 0.0901961, 1)
thickness = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptl4w"]
bg_color = Color(0.52549, 0.419608, 0.345098, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="MediaPlayer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MediaPlayer"]
layout_mode = 2

[node name="TopPanel" type="Panel" parent="MediaPlayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_styles/panel = SubResource("StyleBoxFlat_e1o4g")
script = ExtResource("15_hk3kj")

[node name="HBoxContainer" type="HBoxContainer" parent="MediaPlayer/VBoxContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IconFrame" type="Panel" parent="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yrtfr")

[node name="Icon" type="TextureRect" parent="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer/IconFrame"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -18.0
offset_right = 49.0
offset_bottom = 18.0
grow_vertical = 2
texture = ExtResource("23_1o0wv")
expand_mode = 1

[node name="UtilFrame" type="Panel" parent="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/panel = SubResource("StyleBoxEmpty_yrtfr")

[node name="HBoxContainer" type="HBoxContainer" parent="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer/UtilFrame"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -9.0
offset_right = -8.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 2

[node name="UtilMin" type="TextureButton" parent="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer/UtilFrame/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("15_qon0v")
texture_hover = ExtResource("16_6gfof")
ignore_texture_size = true
stretch_mode = 5

[node name="UtilMax" type="TextureButton" parent="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer/UtilFrame/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("17_pgdxf")
texture_hover = ExtResource("18_0johc")
ignore_texture_size = true
stretch_mode = 5

[node name="UtilExit" type="TextureButton" parent="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer/UtilFrame/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("19_r3uom")
texture_hover = ExtResource("20_l0ccj")
ignore_texture_size = true
stretch_mode = 5

[node name="ImagePanel" type="Panel" parent="MediaPlayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pjstw")

[node name="Image" type="TextureRect" parent="MediaPlayer/VBoxContainer/ImagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6
script = ExtResource("3_cr3j3")

[node name="ColorRect" type="ColorRect" parent="MediaPlayer/VBoxContainer/ImagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_dgbhr")

[node name="BottomPanel" type="Panel" parent="MediaPlayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_styles/panel = SubResource("StyleBoxFlat_e1o4g")

[node name="MarginContainer" type="MarginContainer" parent="MediaPlayer/VBoxContainer/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="SupportAndBrightness" type="PanelContainer" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_styles/panel = SubResource("StyleBoxEmpty_8trbr")

[node name="HBoxContainer" type="HBoxContainer" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/SupportAndBrightness"]
layout_mode = 2

[node name="SupportButton" type="TextureButton" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/SupportAndBrightness/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("3_51bfy")
texture_hover = ExtResource("5_lyyus")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_60fsh")

[node name="--SPACER--3" type="Control" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/SupportAndBrightness/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="BrightnessToggle" type="TextureButton" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/SupportAndBrightness/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
toggle_mode = true
texture_normal = ExtResource("3_ikp8g")
texture_hover = ExtResource("4_wchhm")
ignore_texture_size = true
stretch_mode = 5

[node name="Play" type="PanelContainer" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_b3veu")

[node name="HBoxContainer" type="HBoxContainer" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/Play"]
layout_mode = 2
alignment = 1

[node name="--SPACER--" type="Control" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/Play/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayButton" type="TextureButton" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/Play/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
toggle_mode = true
texture_normal = ExtResource("4_mng0e")
texture_pressed = ExtResource("9_qj1g7")
texture_hover = ExtResource("9_cynci")
ignore_texture_size = true
stretch_mode = 5

[node name="--SPACER--2" type="Control" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/Play/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeButtonAndSlider" type="PanelContainer" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_styles/panel = SubResource("StyleBoxEmpty_a864l")

[node name="HBoxContainer" type="HBoxContainer" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider"]
layout_mode = 2
alignment = 2

[node name="MuteButton" type="TextureButton" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
toggle_mode = true
texture_normal = ExtResource("5_gdcre")
texture_pressed = ExtResource("11_lu1wo")
texture_hover = ExtResource("10_w3ax0")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("14_k2qb6")

[node name="HSlider" type="HSlider" parent="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer"]
custom_minimum_size = Vector2(192, 48)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/slider = SubResource("StyleBoxLine_t6ahn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_ptl4w")
max_value = 1.0
step = 0.001
script = ExtResource("7_gtag2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ei42t")
script = ExtResource("25_ggpoa")

[connection signal="gui_input" from="MediaPlayer/VBoxContainer/TopPanel" to="MediaPlayer/VBoxContainer/TopPanel" method="_on_gui_input"]
[connection signal="pressed" from="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer/UtilFrame/HBoxContainer/UtilMin" to="MediaPlayer/VBoxContainer/TopPanel" method="_on_util_min_pressed"]
[connection signal="pressed" from="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer/UtilFrame/HBoxContainer/UtilMax" to="MediaPlayer/VBoxContainer/TopPanel" method="_on_util_max_pressed"]
[connection signal="pressed" from="MediaPlayer/VBoxContainer/TopPanel/HBoxContainer/UtilFrame/HBoxContainer/UtilExit" to="MediaPlayer/VBoxContainer/TopPanel" method="_on_util_exit_pressed"]
[connection signal="pressed" from="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/SupportAndBrightness/HBoxContainer/SupportButton" to="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/SupportAndBrightness/HBoxContainer/SupportButton" method="_on_pressed"]
[connection signal="toggled" from="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/SupportAndBrightness/HBoxContainer/BrightnessToggle" to="MediaPlayer/VBoxContainer/ImagePanel/ColorRect" method="_on_brightness_toggle_toggled"]
[connection signal="toggled" from="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/Play/HBoxContainer/PlayButton" to="AudioStreamPlayer" method="_on_play_button_toggled"]
[connection signal="toggled" from="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer/MuteButton" to="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer/MuteButton" method="_on_toggled"]
[connection signal="drag_ended" from="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer/HSlider" to="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer/HSlider" method="_on_drag_ended"]
[connection signal="mouse_exited" from="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer/HSlider" to="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer/HSlider" method="_on_mouse_exited"]
[connection signal="value_changed" from="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer/HSlider" to="MediaPlayer/VBoxContainer/BottomPanel/MarginContainer/HBoxContainer/VolumeButtonAndSlider/HBoxContainer/HSlider" method="_on_value_changed"]
